--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -107,8 +107,12 @@
             </div>
             <div class="col-md-4">
                 <p>
+                    <img src="static/images/icons8-python-48.png"> 
+                    <a target="_blank" href="https://www.python.org">Python</a>
                     <img src="static/images/icons8-jupyter-48.png"> 
                     <a target="_blank" href="https://jupyter.org">Jupyter</a>
+                    <img src="static/images/icons8-visual-studio-code-2019-48.png"> 
+                    <a target="_blank" href="https://code.visualstudio.com">VS Code</a>
                 </p>
             </div>
         </div>
@@ -160,6 +164,10 @@
                 <p>
                     <img src="static/images/icons8-github-48.png"> 
                     <a target="_blank" href="https://github.com">GitHub</a>
+                    <img src="static/images/icons8-slack-new-48.png"> 
+                    <a target="_blank" href="https://slack.com">Slack</a>
+                    <img src="static/images/icons8-zoom-48.png"> 
+                    <a target="_blank" href="https://zoom.us">Zoom</a>
                 </p>              
             </div>
         </div>
