--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -146,7 +146,7 @@
                 <h2>Visualization</h2>
             </div>
             <div class="col-md-5">
-                <h4><a href="../Tableau Store/tableau_store.html" target="_blank" rel="noopener noreferrer">Tableau</a></h4>
+                <h4><a href="../Tableau Store/tableau_customer.html" target="_blank" rel="noopener noreferrer">Tableau</a></h4>
             </div>
             <div class="col-md-4">
                 <p>
