add questions to homepage

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -53,6 +53,31 @@
         </div>
         </div>
     </div> 
+    <br>
+    <div class="outer">
+        <div class="inner"> 
+        <div class="col-md-12"> 
+            <h1 class="display-4" style="color: green; font-size:35px; padding-left: 30px; padding-right: 60px">Questions to answer:</h1>
+            <p style="color: rgb(50, 50, 59); font-size:25px ; padding-left: 30px; padding-right: 60px">
+                <!-- <br>&#9989; result
+                <br>&#10062; result -->
+                <br>&#10067; 1.	How many stores there are?
+                <br>
+                <br>&#10067; 2.	In which cities and states these stores are?
+                <br>
+                <br>&#10067; 3.	Do costumer demographics link to membership card tiers?
+                <br>
+                <br>&#10067; 4.	Is the cost of sales promotions linked to customers demographics?
+                <br>
+                <br>&#10067; 5.	What is media cost, by state, by store type, by food department?
+                <br>
+                <br>&#10067; 6.	Which are top media promotions, the top unit of sales?
+                <br>
+                <br>&#10067; 7.	What are the sales, by department, store, food category?
+            </p>
+        </div>
+        </div> 
+    </div>
     <hr>
     <div class="container-fluid">
         <div class="row">       
