--- a/Machine Learning/machine_learning.html
+++ b/Machine Learning/machine_learning.html
@@ -80,9 +80,16 @@
         <div class="col-md-12">
         <!-- <h2>Bubble chart of Machinge Learning Models</h2> -->
         <div class="container-fluid">
-        <a href="https://public.tableau.com/app/profile/gian.marcelin/viz/MLModelAccuracy/AccuracyofMLModelsDB?publish=yes" target="_blank" rel="noopener noreferrer">
-            <img src="static/images/ml_models.png" alt="ml_models" class="center">
-        </a>
+            <div class="row">       
+                <div class="col-md-3">
+                    <h2></h2>
+                </div>
+                <div class="col-md-9">
+                    <a href="https://public.tableau.com/app/profile/gian.marcelin/viz/MLModelAccuracy/AccuracyofMLModelsDB?publish=yes" target="_blank" rel="noopener noreferrer">
+                        <img src="static/images/ml_models.png" alt="ml_models" class="center">
+                    </a>
+                </div>
+            </div>
         </div>
         </div>
     </div>
