--- a/Our Team/our_team.html
+++ b/Our Team/our_team.html
@@ -64,7 +64,14 @@
                 </a>
             </h4>
             <h4 style="color:green; font-family: cursive">Gian Marcelin</h4>
-            <h4 style="color:blue; font-family: cursive">Hilda Hernandez</h4>
+            <h4 style="color:blue; font-family: cursive">Hilda Hernandez
+                <a href="https://github.com/hildavaz">
+                    <img src="static/images/icons8-github-24.png" target="_blank" rel="noopener noreferrer"> 
+                </a>
+                <a href="https://www.linkedin.com/in/hilda-hernandez-40613421">
+                    <img src="static/images/icons8-linkedin-24.png" target="_blank" rel="noopener noreferrer"> 
+                </a>
+            </h4>
             <h4 style="color:purple; font-family: cursive">Stella Khachatryan</h4>
 
         </div>
