--- a/Tableau Store/tableau_store.html
+++ b/Tableau Store/tableau_store.html
@@ -46,7 +46,7 @@
     <br>
     <div class="row"> 
         <div class="container-fluid">
-            <a href="https://public.tableau.com/app/profile/hilda.vazqez/viz/FoodMartMediaCostPromotionsandSales/Story1?publish=yes" target="_blank" rel="noopener noreferrer">
+            <a href="https://public.tableau.com/app/profile/hilda.vazqez/viz/FoodMartMediaCostPromotionsandSales_16672708652530/FoodMartMediaCostPromorionsandSales" target="_blank" rel="noopener noreferrer">
                 <img src="static/images/store_sales.png" alt="store_sales" class="center">
             </a>
         </div>
