--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -57,7 +57,7 @@
     <div class="container"></div>
     <div class="row">
     <div class="col-md-12">  
-        <h1 class="display-4" style="color: green; font-size:35px; padding-left: 30px; padding-right: 60px">Guiding questions:</h1>
+        <h1 class="display-4" style="color: green; font-size:35px; padding-left: 30px; padding-right: 60px">Guiding Questions:</h1>
         <p style="color: rgb(50, 50, 59); font-size:25px ; padding-left: 30px; padding-right: 60px">
             How many stores there are? 
             In which cities and states these stores are? 
@@ -68,7 +68,8 @@
             What are the sales, by department, store, food category?
         </p>
     </div>
-    </div>
+    </div>  
+    <br>
     <hr>
     <div class="container-fluid">
         <div class="row">       
