update ML bubble chart

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -208,7 +208,7 @@
                 <br>&#128309; 1.	Membership Card tiers are strongly linked with customer demographics. 
                 With deep learning model, we can predict Membership Card with accuracy of 0.970. 
                 With random forest model, prediction accuracy can be up to 0.982. 
-                Advertising of Membership Card tiers should be targeted via segmentation.
+                Advertising on Membership Card tiers should be targeted via segmentation.
                 <br>
                 <br>&#128309; 2.	Media Cost can also be predicted by customer demographics with random forest regressor (RMSE: 0.637).  
                 Owners & Investors should pay close attention the makeup of their customers when projecting Sales Promotion budgets.
