--- a/Machine Learning/machine_learning.html
+++ b/Machine Learning/machine_learning.html
@@ -92,7 +92,26 @@
                 </div>
                 <div class="col-md-9">
                     <a href="https://public.tableau.com/app/profile/gian.marcelin/viz/MLModelAccuracy/AccuracyofMLModelsDB?publish=yes" target="_blank" rel="noopener noreferrer">
-                        <img src="static/images/Accuracy of ML Model.png" alt="ml_models" class="center">
+                        <img src="static/images/Accuracy of ML Model.png" alt="Accuracy of ML Models" class="center">
+                    </a>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+
+    <br><hr>
+    <div>
+        <div class="col-md-12">
+        <!-- <h2>Bubble chart of Machinge Learning Models</h2> -->
+        <div class="container-fluid">
+            <div class="row">       
+                <div class="col-md-2">
+                    <h2>Code Example</h2>
+                </div>
+                <div class="col-md-10">
+                    <a href="https://github.com/bpiffard/Capstone_Final_Group_Project/blob/main/04_Final/4_ML_store_and_aggregate_functions.ipynb" target="_blank" rel="noopener noreferrer">
+                        <img src="static/images/GroupAndAggregate.png" alt="GroupAndAggregate" class="center">
                     </a>
                 </div>
             </div>
@@ -103,6 +122,6 @@
     </div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br>
 </body>
 </html>
