--- a/Tableau Customer/tableau_customer.html
+++ b/Tableau Customer/tableau_customer.html
@@ -34,7 +34,8 @@
         <div class="row">   
             <div class="col-md-6">
                 <h2><a href="tableau_customer.html" target="_blank" rel="noopener noreferrer">
-                    Customer Demographics</a></h2>    
+                    Customer Demographics</a></h2>
+            </div>    
             <div class="col-md-6">
                 <h2><a href="../Tableau Store/tableau_store.html" target="_blank" rel="noopener noreferrer">
                     Media Cost, Promotions and Store Sales</a></h2>
