update name of ml

--- a/Machine Learning/machine_learning.html
+++ b/Machine Learning/machine_learning.html
@@ -47,14 +47,14 @@
             </div>
             <div class="col-md-2">
                 <h4><a href="https://github.com/bpiffard/Capstone_Final_Group_Project/blob/main/04_Final/4_RandomForest_DeepLearning_cust_member_card.ipynb" target="_blank" rel="noopener noreferrer">
-                    Random Forest Classification</a></h4>
+                    Random Forest Classifier</a></h4>
                 <p>Features: customer segments</p>
                 <p>Target: member card</p>
                 <p>Accuracy: 0.950-0.981</p>
             </div>
             <div class="col-md-2">
                 <h4><a href="https://github.com/bpiffard/Capstone_Final_Group_Project/blob/gm_branch/01_ML_Combined/RandomForest_DeepLearning_cust_member_card.ipynb" target="_blank" rel="noopener noreferrer">
-                    Deep Learning Classification</a></h4>
+                    Deep Learning Neural Network</a></h4>
                 <p>Features: customer segments</p>
                 <p>Target: member card</p>
                 <p>Accuracy: 0.970</p>
